# awesome-persian-youtubers

./: LICENSE  Makefile  README.md  README.template  awesome-persian-youtubers  categories.json5  channels.json5
.github/workflow/: generate_readme.yml
.github/workflows/: generate_readme.yml
cli/: Cargo.toml  rustfmt.toml
cli/src/: macros.rs  main.rs  model.rs  tests.rs  youtube.rs
export/: list.json  list.yaml
