[package]
name = "awesome-persian-youtubers"
version = "0.1.0"
authors = ["Omid Rad <omidmr@gmail.com>"]
edition = "2018"

[dependencies]
json5 = "0.3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
persian = "0.1"
ptime = "0.1"

[profile.release.build-override]
opt-level = 0

[profile.release]
lto = true
codegen-units = 1