[package]
name = "awesome-persian-youtubers"
version = "0.2.0"
authors = ["Omid Rad <omidmr@gmail.com>"]
edition = "2018"

[dependencies]
json5 = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
persian = "0.1"
ptime = "0.1"
structopt = "0.3.21"

[profile.release.build-override]
opt-level = 0

[profile.release]
lto = true
codegen-units = 1